[gd_scene load_steps=4 format=3 uid="uid://bnm0y2g0ns05m"]

[ext_resource type="Script" uid="uid://dkw32n17yt6w4" path="res://script/scene_1_1.gd" id="1_t8xpy"]
[ext_resource type="PackedScene" uid="uid://c8lv21odaka5g" path="res://scene/pak_anton.tscn" id="2_32ww4"]
[ext_resource type="PackedScene" uid="uid://fkdu00lqfjkp" path="res://scene/aruna.tscn" id="3_2hy5q"]

[node name="scene_1_1" type="Node2D"]
script = ExtResource("1_t8xpy")

[node name="backgrounds" type="Node2D" parent="."]

[node name="backrgound_1" type="Sprite2D" parent="backgrounds"]

[node name="background_2" type="Sprite2D" parent="backgrounds"]
visible = false

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(576, 0)

[node name="pak_anton" parent="Node2D" instance=ExtResource("2_32ww4")]

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(1459, 0)

[node name="aruna" parent="Node2D2" instance=ExtResource("3_2hy5q")]
